--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>ru.pashnik.kspt.dev.generator</groupId>
     <artifactId>data-generator</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <postgresql.version>9.1-901-1.jdbc4</postgresql.version>
+        <org.hibernate.version>4.3.8.Final</org.hibernate.version>
+        <org.projectlombok.version>1.18.6</org.projectlombok.version>
+        <com.github.javafaker.version>0.17.2</com.github.javafaker.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -24,20 +32,26 @@
         <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.1-901-1.jdbc4</version>
+            <version>${postgresql.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.3.8.Final</version>
+            <version>${org.hibernate.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.6</version>
+            <version>${org.projectlombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${com.github.javafaker.version}</version>
         </dependency>
     </dependencies>
 
