refactored data config

--- a/src/main/resources/data_config.properties
+++ b/src/main/resources/data_config.properties
@@ -9,3 +9,8 @@ complectation_optional_number=0
 complectation_engine_number=0
 optional_complectation_number=0
 engine_complectation_number=0
+adverts_number=0
+post_types_number=0
+users_number=0
+posts_nunber=0
+users_ownership_number=0
