added new table sale history

--- a/src/main/resources/data_config.properties
+++ b/src/main/resources/data_config.properties
@@ -1,16 +1,17 @@
-manufacturer_number=100
-car_number=150
-complectation_number=5
-transmission_number=3
-body_number=15
-engine_number=12
-optional_number=4
-complectation_optional_number=2
-complectation_engine_number=3
-optional_complectation_number=4
-engine_complectation_number=5
-adverts_number=120
-post_types_number=12
-users_number=9
-posts_nunber=20
-users_ownership_number=30
+manufacturer_number=10
+car_number=10
+complectation_number=12
+transmission_number=2
+body_number=5
+engine_number=15
+optional_number=15
+complectation_optional_number=10
+complectation_engine_number=10
+optional_complectation_number=10
+engine_complectation_number=10
+adverts_number=10
+post_types_number=3
+users_number=6
+posts_nunber=3
+users_ownership_number=3
+sale_history_number = 5
