--- a/src/main/resources/data_config.properties
+++ b/src/main/resources/data_config.properties
@@ -14,4 +14,6 @@ post_types_number=3
 users_number=6
 posts_nunber=3
 users_ownership_number=3
-sale_history_number = 10
+sale_history_number = 15
+optional_sale_number = 10
+sale_optional_number = 1
